# Fast_Drone_Racer

./: README.md
avata_sh/: run_ov.sh  run_vins.sh
fast250_sh/: run_ov.sh  run_vins.sh
src/Utils/airsim_ros/: CMakeLists.txt
src/Utils/bbox_ex_msgs/: CMakeLists.txt  package.xml
src/Utils/bbox_ex_msgs/msg/: BoundingBox.msg
src/Utils/pose_sub/: CMakeLists.txt  package.xml
src/Utils/pose_sub/src/: pose_sub.cpp
src/Utils/vio2mavros/launch/: ov_to_mavros.launch
src/Utils/vio2mavros/src/: vins_to_mavros.cpp
src/VINS-Fusion/config/avata/: left.yaml  right.yaml  rmua.yaml
src/VINS-Fusion/config/fast250/: left.yaml  right.yaml  rmua.yaml
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/VINS-Fusion/vins_estimator/launch/: run_avata_vins.launch  run_fast250_vins.launch
src/detect_node/: CMakeLists.txt  package.xml
src/detect_node/include/detect_node/: box_position_publisher.hpp  postprocess.hpp
src/detect_node/src/: box_position_publisher.cpp  box_position_publisher_node.cpp  postprocess.cpp
src/ov_rmua/config/rmua_avata/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/ov_rmua/config/rmua_fast250/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/ov_rmua/ov_init/cmake/: ROS1.cmake
src/ov_rmua/ov_init/src/dynamic/: DynamicInitializer.cpp  PoseInitializer.cpp  PoseInitializer.h
src/ov_rmua/ov_init/src/static/: StaticInitializer.cpp
src/ov_rmua/ov_msckf/launch/: subscribe_avata.launch  subscribe_fast250.launch
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/plan_manage/launch/: avata_openVINS.launch  avata_vins.launch  default.rviz  fast250_openVINS.launch  fast250_vins.launch  rmua_sim.launch  test.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/px4ctrl/launch/: run_ctrl_ov.launch  run_ctrl_vins.launch
src/px4ctrl/src/: controller.cpp  controller.h  input.cpp
